# arthroscopy

./: CLAUDE.md  pyproject.toml  requirements.txt  visualize_sim.py  visualize_tissue.py
arthroscopy_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
claude_advice/: FEM_and_Simulation_Explainer.docx  ~$M_and_Simulation_Explainer.docx
configs/: default.yaml  sigmoid.yaml
data/: configs.py  dataset.py  preprocess.py
model/: decoder.py  encoder.py  model.py
sim/: configs.py  generate_dataset.py  shapes.py  simulation.py  tissue.py  trajectory.py
tests/: test_sigmoid_tissue.py  test_sim.py
training/: configs.py  losses.py  train.py
