[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arthroscopy-poc"
version = "0.1.0"
description = "FEM simulation + ML model for arthroscopic tissue stiffness estimation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyrallis>=0.3.1",
    "h5py>=3.10",
    "tqdm>=4.66",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*", "data*", "model*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
